--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "reset-db": "node scripts/resetDB.js"
+
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
@@ -27,7 +29,10 @@
     "eslint-config-next": "16.1.5",
     "shadcn": "^3.8.5",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
+
+
